apps/media/plex/exporter.yaml
#
# Reference:
# https://github.com/axsuul/plex-media-server-exporter
#

apiVersion: v1
kind: Service
metadata:
  name: plex-exporter
  namespace: media
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: plex-exporter
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: plex-exporter
  type: ClusterIP
  ports:
    - name: metrics
      port: 9594
      protocol: TCP
      targetPort: metrics
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex-exporter
  namespace: media
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: plex-exporter
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: plex-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: plex-exporter
    spec:
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: abaddon
      containers:
        - name: plex-exporter
          image: ghcr.io/axsuul/plex-media-server-exporter:2.1.0 # {"$imagepolicy": "media:plex-exporter"}
          imagePullPolicy: Always
          ports:
            - name: metrics
              containerPort: 9594
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
