apps/media/plex/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex-dashboard-https
  namespace: media
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: plex
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`plex.powell.place`)
      middlewares:
        - name: security
          namespace: kube-system
      services:
        - name: plex-media-server
          port: pms
